--- a/src/app/settings/screens/screen-settings/screen-settings.component.html
+++ b/src/app/settings/screens/screen-settings/screen-settings.component.html
@@ -1,1 +1,3 @@
-<p>screen-settings works!</p>
+<h1>Einstellungen</h1>
+<pt-color-scheme-chooser></pt-color-scheme-chooser>
+<pt-categories></pt-categories>
