color palette handling / settings

--- a/src/app/settings/components/categories/categories.component.html
+++ b/src/app/settings/components/categories/categories.component.html
@@ -10,9 +10,7 @@
         <mat-expansion-panel-header>
           <mat-panel-title>{{ category.title }}</mat-panel-title>
         </mat-expansion-panel-header>
-        <p><span class="dailyQueries">{{ category.dailyQueries }}&times; tägl.</span>{{ category.description }}</p>
-        <mat-divider [inset]="true"></mat-divider>
-        <button [routerLink]="['/settings/screen-edit-category/' + category.id]" mat-button>Kategorie bearbeiten</button>
+        <p>{{ category.description }}<a [routerLink]="['/settings/screen-edit-category/' + category.id]"><mat-icon>edit</mat-icon></a></p>
       </mat-expansion-panel>
     </mat-accordion>
 
