--- a/src/app/settings/screens/screen-settings/screen-settings.component.html
+++ b/src/app/settings/screens/screen-settings/screen-settings.component.html
@@ -1,3 +1,6 @@
-<h1>Einstellungen</h1>
-<pt-color-scheme-chooser></pt-color-scheme-chooser>
-<pt-categories></pt-categories>
+<div class="content">
+  <h1>Einstellungen</h1>
+  <pt-color-scheme-chooser></pt-color-scheme-chooser>
+  <pt-categories></pt-categories>
+  <pt-language></pt-language>
+</div>
