--- a/src/app/shared/components/ui/layout-footer/layout-footer.component.scss
+++ b/src/app/shared/components/ui/layout-footer/layout-footer.component.scss
@@ -1,11 +1,6 @@
-mat-toolbar {
+:host {
+  padding: 30px 0 5px 0;
   display: flex;
-  justify-content: space-between;
-
-  mat-icon {
-    font-size: 32px;
-    line-height: 32px;
-    width: 32px;
-    height: 32px;
-  }
+  justify-content: center;
+  font-size: 10px;
 }
