issue #14 edit category

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <pt-layout-header></pt-layout-header>
-<pt-layout-main>
-  <router-outlet></router-outlet>
+<pt-layout-main [@routeAnimations]="outlet.activatedRouteData.state">
+  <router-outlet #outlet="outlet"></router-outlet>
 </pt-layout-main>
 <pt-layout-footer></pt-layout-footer>
