--- a/src/app/shared/components/ui/layout-header/layout-header.component.scss
+++ b/src/app/shared/components/ui/layout-header/layout-header.component.scss
@@ -11,4 +11,9 @@ mat-toolbar {
   div.logo, div.links {
     width: 32px;
   }
+
+  .title {
+    font-weight: normal;
+    font-size: 16px;
+  }
 }
