--- a/src/app/settings/components/categories/categories.component.html
+++ b/src/app/settings/components/categories/categories.component.html
@@ -5,12 +5,13 @@
   </mat-card-title>
   <mat-card-subtitle>Die Möglichkeit ist die schwerste aller Kategorien.</mat-card-subtitle>
   <mat-card-content>
+    <button mat-mini-fab (click)="newCategory()">+</button>
     <mat-accordion *ngIf="(categories$ | async) as categories; else noCategories">
       <mat-expansion-panel *ngFor="let category of categories">
         <mat-expansion-panel-header>
           <mat-panel-title>{{ category.title }}</mat-panel-title>
         </mat-expansion-panel-header>
-        <p>{{ category.description }}<a [routerLink]="['/settings/screen-edit-category/' + category.id]"><mat-icon>edit</mat-icon></a></p>
+        <p>{{ category.description }}<a [routerLink]="['/settings/edit-category/' + category.id]"><mat-icon>edit</mat-icon></a></p>
       </mat-expansion-panel>
     </mat-accordion>
 
