--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,5 +17,11 @@ span.svg-icon {
   // Icon made by Freepik from www.flaticon.com
 
 .content {
-  padding: 10px;
+  padding: 20px;
+}
+
+
+h1 {
+  font-size: 26px;
+  font-weight: normal;
 }
