--- a/src/app/settings/screens/screen-settings/screen-settings.component.html
+++ b/src/app/settings/screens/screen-settings/screen-settings.component.html
@@ -1,6 +1,6 @@
 <div class="content">
-  <h1>Einstellungen</h1>
-  <pt-color-scheme-chooser></pt-color-scheme-chooser>
+  <h1 translate>SETTINGS.TITLE</h1>
   <pt-categories></pt-categories>
+  <pt-color-scheme-chooser></pt-color-scheme-chooser>
   <pt-language></pt-language>
 </div>
