--- a/src/app/settings/screens/screen-settings/screen-settings.component.scss
+++ b/src/app/settings/screens/screen-settings/screen-settings.component.scss
@@ -1,8 +1,14 @@
 pt-color-scheme-chooser {
   display: block;
+  margin: 30px 0;
 }
 
 pt-categories {
+  display: block;
+  margin: 30px 0;
+}
+
+pt-language {
   display: block;
   margin: 30px 0;
 }
